<resources>
    <string name="app_name">InstaSOS</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_recordings">Recordings</string>
    <string name="accessibility_service_label">InstaSOS</string>
    <string name="accessibility_service_description">Press volume up and down buttons simultaneously for 3 seconds to initiate InstaSOS</string>
    <string name="cab_hailing_activity_label">Request cab</string>
    <string name="button_text">SOS</string>
    <string name="emergency_help_text">Emergency help Needed?</string>
    <string name="press_emergency">Press the button to send SOS</string>
    <string name="police_title">Call Police</string>
    <string name="hail_cab">Call Cab</string>
    <string name="cab_image">cab</string>
    <string name="forward_arrow">forward</string>
    <string name="police_desc">police</string>
</resources>